Разметил каталог Техномарта
Хидер и футер скопировал с главной, сделав небольшие правки хидера для каталога.  Разметил список товаров и фильтр.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-    <!-- Долго вспоминал как делать кнопки с иконками (карзина, закладки, телефон и т.д. но так и не вспомнил, а в интернетах слишком много разнообразных вариантов так что наверное лучше будет подождать пока этот момент прояснится в рамках курса). -->
+    <!-- не понял нужно ли сразу модальные окна размечать (пока не размечал) -->
+    <!-- на следующей лекции нам будут вещать про svg, так что не вижу смысла на данный момент замарачиваться с иконками. -->
     <header class="main-header">
       <!-- верхний блок шапки -->
       <div class="header-top-container">
@@ -21,9 +22,12 @@
       <!-- средний блок шапки -->
       <div class="header-middle-container">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-        <button type="button" name="phone">
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
-        </button>
+        <div class="header-contacts">
+          <button type="button" name="phone">
+            <a href="tel:+78125550555">+7(812)555-05-55</a>
+          </button>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
         <ul class="user-menu">
           <li><a href="#">Вход</a></li>
           <li><a href="#">Регистрация</a></li>
@@ -87,14 +91,14 @@
       <div class="footer-middle">
         <address class="address">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          +7(812)555-05-55 <!-- пойдёт так или нужно семантично обозначить что это номер телефона? -->
+          +7(812)555-05-55 <!-- нужно ли семантично обозначить что это номер телефона? -->
         </address>
         <nav class="footer-top-navigation">
           <ul>
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
             <li><a href="tool.html">Инструмент</a></li>
-            <li><a href="special-offers.html">Спецпредложения</a></li>
+            <li><a href="special-offers.html">Спецпредложения</a></li>+
           </ul>
         </nav>
       </div>
