Исправил логотип главной страницы span на ссылку

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-    <!-- не понял нужно ли сразу модальные окна размечать (пока не размечал) -->
-    <!-- на следующей лекции нам будут вещать про svg, так что не вижу смысла на данный момент замарачиваться с иконками. -->
     <header class="main-header">
       <!-- верхний блок шапки -->
       <div class="header-top-container">
-        <span class="header-logo">Техномарт</span> <!-- что это? кнопка? ссылка? логотип? картинка? -->
+        <a class="header-logo">Техномарт</a>
         <form class="search">
           <input type="text" placeholder="Искать здесь:">
           <button type="submit"></button>
