Добавил текст кнопки поиска

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a class="header-logo">Техномарт</a>
         <form class="search">
           <input type="text" placeholder="Искать здесь:">
-          <button type="submit"></button>
+          <button type="submit">Найти</button> <!-- кнопку потом скрыть -->
         </form>
         <button type="button" name><a href="#">Закладки: 0</a></button>
         <button type="button" name><a href="#">Корзина: 0</a></button>
