убрал кнопки закладок, корзины и оформления заказа. Оставил только ссылки.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <input type="text" placeholder="Искать здесь:">
           <button type="submit">Найти</button> <!-- кнопку потом скрыть -->
         </form>
-        <button type="button" name><a href="#">Закладки: 0</a></button>
-        <button type="button" name><a href="#">Корзина: 0</a></button>
-        <button type="button" name><a href="#">Оформить заказ</a></button>
+        <a href="#">Закладки: 0</a>
+        <a href="#">Корзина: 0</a>
+        <a href="#">Оформить заказ</a>
       </div>
       <!-- средний блок шапки -->
       <div class="header-middle-container">
