переделал секцию company-and-contacts

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </header>
 
     <main>
-      <div class="container">      
-        <div class="company-and-contacts">
+      <section class="company-and-contacts">      
+        <div class="container">
           <!-- О КОМПАНИИ -->
-          <section class="about-us">
+          <div class="about-us">
             <h2>Компания «Техномарт»</h2>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
@@ -65,9 +65,9 @@
                 <a href="#">Подробнее о компании</a>
               </button>
             </ul>
-          </section>
+          </div>
           <!-- КОНТАКТЫ -->
-          <section class="contacts">
+          <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -75,9 +75,9 @@
             <button type="button" name="write-us">
               <a href="#">Заблудились? Напишите нам!</a>
             </button>
-          </section>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- ФУТЕР -->
