Поубирал тэги nav из футера

--- a/catalog.html
+++ b/catalog.html
@@ -291,15 +291,13 @@
       <div class="footer-top">
         <div class="container">
           <span class="header-logo">Техномарт</span>
-          <nav class="footer-top-navigation">
-            <ul>
-              <li><a href="about-us.html">Компания</a></li>
-              <li><a href="news.html">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="delivery.html">Доставка</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-          </nav>
+          <ul class="footer-top-navigation">
+            <li><a href="about-us.html">Компания</a></li>
+            <li><a href="news.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="delivery.html">Доставка</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+          </ul>
         </div>
       </div>        
       <div class="footer-middle">
@@ -307,15 +305,13 @@
           <address class="address">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7(812)555-05-55
-          </address>
-          <nav class="footer-top-navigation">
-            <ul>
-              <li><a href="materials.html">Материалы</a></li>
-              <li><a href="equipment.html">Техника</a></li>
-              <li><a href="tool.html">Инструмент</a></li>
-              <li><a href="special-offers.html">Спецпредложения</a></li>+
-            </ul>
-          </nav>
+          </address>          
+          <ul class="footer-top-navigation">
+            <li><a href="materials.html">Материалы</a></li>
+            <li><a href="equipment.html">Техника</a></li>
+            <li><a href="tool.html">Инструмент</a></li>
+            <li><a href="special-offers.html">Спецпредложения</a></li>+
+          </ul>          
         </div>
       </div>
       <!-- СОЦИАЛКИ -->    
