--- a/index.html
+++ b/index.html
@@ -102,14 +102,12 @@
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7(812)555-05-55
           </address>
-          <nav class="footer-top-navigation">
-            <ul>
-              <li><a href="materials.html">Материалы</a></li>
-              <li><a href="equipment.html">Техника</a></li>
-              <li><a href="tool.html">Инструмент</a></li>
-              <li><a href="special-offers.html">Спецпредложения</a></li>+
-            </ul>
-          </nav>
+          <ul class="footer-top-navigation">
+            <li><a href="materials.html">Материалы</a></li>
+            <li><a href="equipment.html">Техника</a></li>
+            <li><a href="tool.html">Инструмент</a></li>
+            <li><a href="special-offers.html">Спецпредложения</a></li>+
+          </ul>
         </div>
       </div>
       <!-- СОЦИАЛКИ --> 
