убрал div социалок

--- a/index.html
+++ b/index.html
@@ -84,16 +84,14 @@
     <footer class="main-footer">
       <div class="footer-top">
         <div class="container">
-          <span class="header-logo">Техномарт</span>
-          <nav class="footer-top-navigation">
-            <ul>
-              <li><a href="about-us.html">Компания</a></li>
-              <li><a href="news.html">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="delivery.html">Доставка</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-          </nav>
+          <span class="header-logo">Техномарт</span>          
+          <ul class="footer-top-navigation">
+            <li><a href="about-us.html">Компания</a></li>
+            <li><a href="news.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="delivery.html">Доставка</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+          </ul>          
         </div>
       </div>
       <div class="footer-middle">
@@ -117,13 +115,11 @@
             &copy; 2010-2017 Компания «Техномарт»<br>
             Все права защищены
           <p>
-          <div class="footer-social">
-            <ul>
-              <li><a class="social-button" href="#">Вконтакте</a></li>
-              <li><a class="social-button" href="#">Фейсбук</a></li>
-              <li><a class="social-button" href="#">Инстаграм</a></li>
-            </ul>
-          </div>
+          <ul class="footer-social">
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>  
           <p>
             Обратная связь:<br>
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
