--- a/catalog.html
+++ b/catalog.html
@@ -303,7 +303,7 @@
       <div class="footer-middle">
         <div class="container">
           <address class="address">
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             +7(812)555-05-55
           </address>          
           <ul class="footer-top-navigation">
@@ -318,22 +318,20 @@
       <div class="footer-bottom">
         <div class="container">
           <p>
-            &copy; 2010-2017 Компания «Техномарт»<br>
+            &copy; 2010-2017 Компания «Техномарт»
             Все права защищены
+          <p>          
+          <ul class="footer-social">
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>          
           <p>
-          <div class="footer-social">
-            <ul>
-              <li><a class="social-button" href="#">Вконтакте</a></li>
-              <li><a class="social-button" href="#">Фейсбук</a></li>
-              <li><a class="social-button" href="#">Инстаграм</a></li>
-            </ul>
-          </div>
-          <p>
-            Обратная связь:<br>
+            Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p>
-            Разработано &#8211;<br>
+            Разработано &#8211;
             <a href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
         </div>
