--- a/catalog.html
+++ b/catalog.html
@@ -27,11 +27,11 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="catalog-user-menu">
+          <div class="user-menu">
             <span class="catalog-user-name">Равшан Джамшутович</span>
             <span class="catalog-user-exit">Выход</span>
-            <span><a href="#">Мои заказы</a></span>
-            <span><a href="#">Личный кабинет</a></span>
+            <a href="#">Мои заказы</a>
+            <a href="#">Личный кабинет</a>
           </div>
         </div>
       </div>
