--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <ul class="user-menu">
-            <li><a href="#">Вход</a></li>
-            <li><a href="#">Регистрация</a></li>
-          </ul>
+          <div class="user-menu">
+            <a href="#">Вход</a>
+            <a href="#">Регистрация</a>
+          </div>
         </div>
       </div>
       <!-- основная навигация -->
