--- a/catalog.html
+++ b/catalog.html
@@ -27,12 +27,14 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="user-menu">
-            <span class="catalog-user-name">Равшан Джамшутович</span>
-            <span class="catalog-user-exit">Выход</span>
-            <a href="#">Мои заказы</a>
-            <a href="#">Личный кабинет</a>
-          </div>
+          <ul class="user-menu">
+            <li><span class="catalog-user-name">Равшан Джамшутович</span></li>
+            <li><span class="catalog-user-exit">Выход</span></li>
+            <li><a href="#">Вход</a></li>
+            <li><a href="#">Регистрация</a></li>
+            <li><a href="#">Мои заказы</a></li>
+            <li><a href="#">Личный кабинет</a></li>
+          </ul>
         </div>
       </div>
       <!-- основная навигация -->    
