--- a/catalog.html
+++ b/catalog.html
@@ -51,9 +51,10 @@
           </ul>
         </div>
       </nav>
-    </header>    
+    </header>
 
-    <main>
+    <!-- ХЛЕБНЫЕ КРОШКИ -->
+    <div class="breadcrumbs">
       <div class="container">
         <ul class="breadcrumbs-catalog">
           <li><a href="index.html">Главная</a></li>
@@ -61,6 +62,11 @@
           <li><a href="tool.html">Инструмент</a></li>
           <li><a>Перфораторы</a></li>
         </ul>
+      </div>
+    </div>
+
+    <main>
+      <div class="container">        
         <h1>Перфораторы</h1>
         <!-- Секция фильтров -->
         <section class="filters">
