breadcrumbs - заменил div на section + аналогично у секции фильтров и раздела с карточками

--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
     </header>
 
     <!-- ХЛЕБНЫЕ КРОШКИ -->
-    <div class="breadcrumbs">
+    <section class="breadcrumbs">
       <div class="container">
         <ul class="breadcrumbs-catalog">
           <li><a href="index.html">Главная</a></li>
@@ -63,7 +63,7 @@
           <li><a>Перфораторы</a></li>
         </ul>
       </div>
-    </div>
+    </section>
 
     <main>
       <div>
@@ -73,8 +73,8 @@
       </div>
 
       <!-- Секция фильтров -->
-      <div class="container-filters">        
-        <section class="filters">
+      <section class="container-filters">        
+        <div class="filters">
           <h2>Фильтр:</h2>
           <form>
             
@@ -109,11 +109,11 @@
             <input type="submit" value="Показать">
 
           </form>
-        </section>
-      </div>
+        </div>
+      </section>
 
         <!-- карточки товаров -->
-        <section class="catalog">
+        <div class="catalog-goods">
           <div class="sort">
             <span>Сортировка:</span>
             <span>по цене</span>
@@ -227,7 +227,7 @@
             <li class="pagination-item"><a href="#">3</a></li>
             <li class="pagination-next"><a href="#">Следующая</a></li>
           </ul>
-        </section>
+        </div>
       </div>
     </main>
 
