список menu разделил на 2 списка, убрал разделы которые есть только на index.html

--- a/catalog.html
+++ b/catalog.html
@@ -27,11 +27,11 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <ul class="user-menu">
+          <ul class="user-menu-exit">
             <li><span class="catalog-user-name">Равшан Джамшутович</span></li>
             <li><span class="catalog-user-exit">Выход</span></li>
-            <li><a href="#">Вход</a></li>
-            <li><a href="#">Регистрация</a></li>
+          </ul>
+          <ul class="user-menu">
             <li><a href="#">Мои заказы</a></li>
             <li><a href="#">Личный кабинет</a></li>
           </ul>
