--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <ul class="user-menu">
+          <ul class="user-login">
             <li><a href="#">Вход</a></li>
             <li><a href="#">Регистрация</a></li>            
           </ul>
