--- a/catalog.html
+++ b/catalog.html
@@ -27,14 +27,16 @@
             <a href="tel:+78125550555">+7(812)555-05-55</a>            
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <ul class="user-menu-exit">
-            <li><span class="catalog-user-name">Равшан Джамшутович</span></li>
-            <li><span class="catalog-user-exit">Выход</span></li>
-          </ul>
-          <ul class="user-menu">
-            <li><a href="#">Мои заказы</a></li>
-            <li><a href="#">Личный кабинет</a></li>
-          </ul>
+          <div class="menu">
+            <ul class="user-menu-exit">
+              <li><span class="catalog-user-name">Равшан Джамшутович</span></li>
+              <li><span class="catalog-user-exit">Выход</span></li>
+            </ul>
+            <ul class="user-menu">
+              <li><a href="#">Мои заказы</a></li>
+              <li><a href="#">Личный кабинет</a></li>
+            </ul>
+        </div>
         </div>
       </div>
       <!-- основная навигация -->    
