--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
   </head>
+
   <body>
     <header class="main-header">
       <!-- верхний блок шапки -->
@@ -50,7 +52,101 @@
     </header>
 
     <main>
-      <section class="company-and-contacts">      
+
+
+
+      <section class="goods-and-manufacturers">
+        <div class="container">
+
+          <div class="goods">
+            <div>
+              <h2>Популярные товары:</h2>
+              <a href="#">Все популярные товары</a>
+            </div>
+            <div class="goods-list">
+              <ul>
+                <li class="catalog-item">
+                  <figure class="catalog-item-image">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+                  </figure>              
+                  <h3>
+                    <span class="catalog-category">Перфоратор BOSCH</span>
+                    <span class="catalog-item-title">BFG 9000</span>
+                  </h3>
+                  <p class="old-price">32500 ₽.</p>
+                  <p class="new-price">25500 ₽.</p>
+                </li>
+                <li class="catalog-item">
+                  <figure class="catalog-item-image">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                  </figure>              
+                  <h3>
+                    <span class="catalog-category">Перфоратор BOSCH</span>
+                    <span class="catalog-item-title">BFG 3000</span>
+                  </h3>
+                  <p class="old-price">22500 ₽.</p>
+                  <p class="new-price">15500 ₽.</p>
+                </li>
+                <li class="catalog-item">
+                  <figure class="catalog-item-image">           
+                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                  </figure>              
+                  <h3>
+                    <span class="catalog-category">Перфоратор BOSCH</span>
+                    <span class="catalog-item-title">BFG 6000</span>                
+                  </h3>
+                  <p class="old-price">30500 ₽.</p>
+                  <p class="new-price">25500 ₽.</p>
+                </li>
+                <li class="catalog-item new">
+                  <figure class="catalog-item-image">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                  </figure>
+                  <h3>
+                    <span class="catalog-category">Перфоратор BOSCH</span>
+                    <span class="catalog-item-title">BFG 2000</span>
+                  </h3>
+                  <p class="new-price">12500 ₽.</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          
+          <div class="manufacturers">
+
+          </div>
+        </div>
+      </section>
+
+      <section class="delivery-and-services">
+        <div class="container">
+          <div class="services">
+            <h2>Сервисы</h2>
+            <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          </div>
+          <div class="delivery">
+            <div class="delivery-list">
+              <ul>
+                <li>Доставка</li>
+                <li>Гарантия</li>
+                <li>Кредит</li>
+              </ul>
+            </div>
+            <div class="delivery-description">
+              <h2>Доставка</h2>
+              <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+            </div>
+            <div class="car-img">
+              <figure>
+                <img src="img/car.jpg" width="100" height="100" alt="Машина">
+                <img src="img/car-shadow.jpg" width="100" height="100" alt="Тень"> <!-- тень по идее можно на цсс сделать -->
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="company-and-contacts">
         <div class="container">
           <!-- О КОМПАНИИ -->
           <div class="about-us">
@@ -132,4 +228,5 @@
       </div>
     </footer>
   </body>
+  
 </html>
