добавил manufacturers-list
список производителей

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="goods-and-manufacturers">
         <div class="container">
 
-          <div class="goods">
+          <div class="goods"> <!-- популярные товары -->
             <div>
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
@@ -111,10 +111,58 @@
               </ul>
             </div>
           </div>
-          
-          <div class="manufacturers">
 
+          <div class="manufacturers"> <!-- популярные производители -->
+            <div>
+              <h2>Популярные производители:</h2>
+              <a href="#">Все производители</a>
+            </div>
+            <div class="manufacturers-list">
+              <ul>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-1.jpg" width="220" height="165" alt="Bosch">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-2.jpg" width="220" height="165" alt="makita">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-3.jpg" width="220" height="165" alt="deWALT">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-4.jpg" width="220" height="165" alt="Интерскол">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-5.jpg" width="220" height="165" alt="Hitachi">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-6.jpg" width="220" height="165" alt="LG">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-7.jpg" width="220" height="165" alt="AEG power solutions">
+                  </figure>
+                </li>
+                <li>
+                  <figure class="manufacturers-list-image">
+                    <img src="img/img-8.jpg" width="220" height="165" alt="metabo">
+                  </figure>
+                </li>
+              </ul>
+            </div>
           </div>
+
         </div>
       </section>
 
@@ -174,6 +222,7 @@
           </div>
         </div>
       </section>
+
     </main>
 
     <!-- ФУТЕР -->
