--- a/catalog.html
+++ b/catalog.html
@@ -377,5 +377,6 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <div class="overlay"></div>
   </body>
 </html>
